--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
-    <script src="index.js"></script>
 </head>
 <body>
-
+    <div id="main-content-container"></div>
 </body>
 </html>
